Completed: Extension API
